--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.x.x",
     "express": "^4.x.x",
     "googleapis": "^118.x.x",
