--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.x.x",
     "express": "^4.x.x",
     "googleapis": "^118.x.x",
+    "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.x.x",
     "winston": "^3.x.x"
   },
